2010-11-17 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* DetectorBase : fix compiler warning for unused variable
	* tag KLFitter-00-03-14

2010-11-09 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* minor changes in InterfaceD3PD.cxx, InterfaceD3PD.h: overload ConnectTree
	* tag KLFitter-00-03-13

2010-11-08 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* bugfix in InterfaceD3PD.cxx, InterfaceD3PD.h: MC weight
	* tag KLFitter-00-03-12

2010-11-03 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* add InterfaceD3PD.cxx, InterfaceD3PD.h, InterfaceStructNtup.cxx, InterfaceStructNtup.h: Interfaces for TopInputsD3PD and NIKHEF StructNtuples
	* add runKLFitter_D3PD.c: example file for running on a different ntuple without truth information  
	* tag KLFitter-00-03-11

2010-10-06 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* add flag for the athena comparison (different selection + no SimAnn)
	* add flag for truth selection (default : false)
	* tag KLFitter-00-03-10

2010-10-06 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* InterfaceGoTopTree.cxx : require IsTopInputs; remove obsolte isolation (was not used anyway)
	* tag KLFitter-00-03-09

2010-10-05 Stefan Guindon <stefan.guindon@cern.ch>
	
	* LikelihoodBase.h: back to SetCutBTag - Consistency with TopKLFitter
	* tag KLFitter-00-03-08

2010-10-05 Stefan Guindon <stefan.guindon@cern.ch>
	
	* InterfaceGoTopTree.cxx: Include b-tagging weights
	* Fitter.cxx: Run b-tagging with FlagIntegrate
	* ReadConfigFile: Add cut btagging
	* runKLFitter.c : Include addition of config file b-tag cut value to Likelihood class
	* tag KLFitter-00-03-07

2010-10-04 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* InterfaceOutput.cxx: bug fix: matching information is again written out correctly 
	* tag KLFitter-00-03-06

2010-10-03 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* remove DetectorAtlas, Detector, ResDoubleGaussE
	* tag KLFitter-00-03-05
