@@ -1,3 +1,8 @@
+2010-11-18 Johannes Erdmann <johannes.erdmann@cern.ch>
+	
+	* ResDoubleGauss classes : implement a check for the TF parameters
+	* tag KLFitter-00-03-15
+
 2010-11-17 Johannes Erdmann <johannes.erdmann@cern.ch>
 	
 	* DetectorBase : fix compiler warning for unused variable
